Add ability to restore previously tracked accounts through file IO Add ability to search for any range of ranks Add ability to search for account names without full acount name and numbers