@@ -2,15 +2,19 @@ import net.dv8tion.jda.api.entities.MessageChannel;
 import net.dv8tion.jda.api.events.message.MessageReceivedEvent;
 
 import java.io.IOException;
+import java.util.ArrayList;
+import java.util.Date;
 import java.util.LinkedList;
 
 import static java.lang.String.*;
 
 public class CommandHandler {
     private APIHandler api;
+    private AccountContainer accountContainer;
 
-    CommandHandler(APIHandler api) {
+    CommandHandler(APIHandler api, AccountContainer accountContainer) {
         this.api = api;
+        this.accountContainer = accountContainer;
     }
 
     public void sendMessage(MessageChannel channel, String msg) {
@@ -25,14 +29,15 @@ public class CommandHandler {
                 .append("!rankedegirls\n")
                 .append("!biggestloser\n")
                 .append("!addict\n")
-                .append("!top10");
+                .append("!top[X] or !top[X]-[Y]\n")
+                .append("!lookup [account]");
         sendMessage(channel, sb.toString());
     }
 
     public void chimpCheck(MessageChannel channel) {
         StringBuilder sb = new StringBuilder();
         int counter = 0;
-        for (GW2Account acc : api.getLeaderboard()) {
+        for (GW2Account acc : accountContainer.updateLeaderboard()) {
             if (acc.isAChimp()) {
                 counter++;
                 sb.append(acc.reformattedToString()).append("\n");
@@ -49,7 +54,7 @@ public class CommandHandler {
     public void ariEbois(MessageChannel channel) {
         StringBuilder sb = new StringBuilder();
         int counter = 0;
-        for (GW2Account acc : api.getLeaderboard()) {
+        for (GW2Account acc : accountContainer.updateLeaderboard()) {
             if (acc.isA("ebois")) {
                 counter++;
                 sb.append(acc.reformattedToString()).append("\n");
@@ -66,7 +71,7 @@ public class CommandHandler {
     public void listEgirlRanks(MessageChannel channel) {
         StringBuilder sb = new StringBuilder();
         int counter = 0;
-        for (GW2Account acc : api.getLeaderboard()) {
+        for (GW2Account acc : accountContainer.updateLeaderboard()) {
             if (acc.isAnEgirl()) {
                 counter++;
                 sb.append(acc.reformattedToString()).append("\n");
@@ -85,7 +90,7 @@ public class CommandHandler {
 
     public void listTop10(MessageChannel channel) {
         StringBuilder sb = new StringBuilder();
-        for (GW2Account acc : api.getLeaderboard().subList(0, 10)) {
+        for (GW2Account acc : accountContainer.updateLeaderboard().subList(0, 10)) {
             sb.append(acc.reformattedToString()).append("\n");
         }
         String formattedMessage = (format("Current Top 10:\n%s", sb.toString()));
@@ -94,8 +99,8 @@ public class CommandHandler {
     }
 
     public void biggestLoser(MessageChannel channel) {
-        LinkedList<GW2Account> list = api.getLeaderboard();
-        GW2Account loser = list.getFirst();
+        ArrayList<GW2Account> list = accountContainer.updateLeaderboard();
+        GW2Account loser = list.get(0);
         for (GW2Account acc : list.subList(1, list.size())) {
             if (acc.getLosses() > loser.getLosses()) {
                 loser = acc;
@@ -106,8 +111,8 @@ public class CommandHandler {
     }
 
     public void gw2Addict(MessageChannel channel) {
-        LinkedList<GW2Account> list = api.getLeaderboard();
-        GW2Account addict = list.getFirst();
+        ArrayList<GW2Account> list = accountContainer.updateLeaderboard();
+        GW2Account addict = list.get(0);
         int addictTotal = addict.getLosses() + addict.getWins();
         for (GW2Account acc : list.subList(1, list.size())) {
             int total = acc.getLosses() + acc.getWins();
@@ -122,7 +127,7 @@ public class CommandHandler {
 
     public void kaypud(MessageChannel channel) {
         GW2Account kaypud = null;
-        for (GW2Account acc : api.getLeaderboard()) {
+        for (GW2Account acc : accountContainer.updateLeaderboard()) {
             if (acc.getName().toLowerCase().contains("kaypud")) {
                 kaypud = acc;
                 break;
@@ -142,7 +147,7 @@ public class CommandHandler {
         } catch (InterruptedException e) {
             System.out.println(e.toString());
         }
-        for (GW2Account acc : api.getLeaderboard()) {
+        for (GW2Account acc : accountContainer.updateLeaderboard()) {
             if (acc.getName().toLowerCase().contains("davinci")) {
                 moobs = acc;
                 break;
@@ -153,4 +158,57 @@ public class CommandHandler {
         else message = "yeah he's not there";
         sendMessage(channel, message);
     }
+
+    public void getName(MessageChannel channel, String name) {
+        GW2Account lookup = accountContainer.getAccount(name.toLowerCase());
+        if (lookup != null) {
+            String message;
+            if (lookup.isOnLeaderboard()) {
+                message = lookup.reformattedToString();
+            } else {
+                message = format("%s was last seen with rating *%d* (%d-%d) on %s",
+                        lookup.getName(), lookup.getRating(), lookup.getWins(), lookup.getLosses(), lookup.getFormattedDate());
+            }
+            sendMessage(channel, message);
+        } else {
+            sendMessage(channel, "Cannot find account");
+        }
+
+    }
+
+    public void topX(MessageChannel channel, String command) {
+        int start = 0;
+        int end = 50;
+
+        try {
+            String numbers = command.replace("!top", "").trim();
+            if (numbers.contains("-")) {
+                String[] split = numbers.split("-");
+                start = Integer.parseInt(split[0]) - 1;
+                end = Integer.parseInt(split[1]);
+                if (end > 50) end = 50;
+                if (start < 0) start = 0;
+                if (start > 50) start = 50;
+                if (end < 1) end = 1;
+                if (end < start) return;
+            } else {
+                end = Integer.parseInt(numbers);
+                if (end <= start) end = 1;
+                if (end > 50) end = 50;
+            }
+
+            StringBuilder sb = new StringBuilder();
+            for (GW2Account acc : accountContainer.updateLeaderboard().subList(start, end)) {
+                sb.append(acc.reformattedToString()).append("\n");
+            }
+            String intro = start == 0 ? format("Current Top %d:\n", end) : format("Current %d-%d:\n", start + 1, end);
+            String formattedMessage = intro + sb.toString();
+            sendMessage(channel, formattedMessage);
+        } catch (Exception e) {
+            System.err.println(e.toString());
+            sendMessage(channel, "message too long, try 30 or less total accounts");
+            return;
+        }
+    }
+
 }
